k8s-apps/monitoring-stack/grafana/02-grafana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - rp3-node
      securityContext:
        fsGroup: 472
      terminationGracePeriodSeconds: 120
      containers:
        - name: grafana
          image: grafana/grafana
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "1024Mi"
              cpu: "300m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          volumeMounts:
            - name: grafana-data
              mountPath: /var/lib/grafana
            - name: datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards
            - name: dashboard-pods
              mountPath: /var/lib/grafana/dashboards
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
        - name: datasources
          configMap:
            name: grafana-datasources
        - name: dashboard-provider
          configMap:
            name: grafana-dashboard-provider
        - name: dashboard-pods
          configMap:
            name: grafana-dashboard-pods
